# foodordering

./: DockerFile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  requirments.txt  test.py
.github/workflows/: master_ordertasty.yml
Hotel_Arman/: asgi.py  settings.py  urls.py  wsgi.py
login/: urls.py  views.py
login/migrations/: 0001_initial.py  0002_delete_order.py
middlewares/: auth.py
product/: admin.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_category.py  0003_product_category.py  0004_order.py  0005_auto_20210704_2305.py  0006_product_date.py  0007_auto_20210705_1400.py  0008_order_status.py  0009_alter_order_status.py
product/templatetags/: cart.py  custom.py
templates/: base.html  cart.html  index.html  login.html  orders.html  register.html
templatetags/: cart.py
