[tool.poetry]
name = "food_ordering"
version = "0.8"
description = "order as much as you want"
authors = ["armansikriwal <armankumarsikriwal3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
